deploy/argocd/apps/kubevirt/kustomize/httproute-oauth2-istio/authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: oauth2-proxy-kubevirt-manager
  namespace: istio-system
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: default-gateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - to:
        - operation:
            hosts:
              - "kubevirt.PLACEHOLDER.example.com"
